# Rgraphviz

./: .BBSoptions  DESCRIPTION  INDEX  LICENSE  NAMESPACE  README  README.md  R_PROFILE.R  cleanup  cleanup.win  configure  configure.ac  configure.in  configure.win  install.R
R/: AllClasses.R  AllGenerics.R  LL_funcs.R  Ragraph.R  Rgraphviz.R  SimpleMethods.R  agfunctions.R  attrs.R  defaultAttrs.R  ellipse.R  gcneData.R  graph.R  graphLayout.R  graph_methods.R  graphvizVersion.R  graphviz_build_version.R  graphviz_build_version.R.in  imageMap.R  layoutGraph.R  layoutrender.R  makeNodeAttrs.R  pieGlyph.R  plot.R  plotGraph.R  plotUtils.R  renderGraph.R  writers.R  zzz.R
graphviz-win32/: README
graphviz-win32/include/: adjust.h  agraph.h  ast_common.h  cdt.h  circle.h  circo.h  circular.h  const.h  dot.h  dotneato.h  dotprocs.h  fdp.h  globals.h  graph.h  gvrender.h  gvrenderint.h  ingraphs.h  macros.h  neato.h  neatoprocs.h  pack.h  pathgeom.h  pathplan.h  pathutil.h  render.h  renderprocs.h  types.h  vis.h  vispath.h
inst/: NEWS.Rd
inst/GV/: softwareGraph.gv
inst/doc/: Rgraphviz.Rnw  layingOutPathways.Rnw  newRgraphvizInterface.Rnw
inst/prepare/: README  THANKS  build_graphviz_mingw.sh  find_includes.sh  slim_graphviz_2.28.0.sh
inst/prepare/patches_2.28.0/: aclocal.m4-patch  graphviz-2.28.0-bugs.patch  graphviz-2.28.0-configure.patch  graphviz-2.28.0-slim.patch  libltdl-aclocal.m4-patch  ortho.c-patch
inst/unitTests/: test_layout.R  test_toFile.R
inst/usecases/: droso_ppi.R  droso_ppi.html  droso_ppi.rda  droso_ppi_prepare.R
man/: AgEdge-class.Rd  AgNode-class.Rd  AgTextLabel-class.Rd  BezierCurve-class.Rd  GraphvizAttributes.Rd  GraphvizLayouts.Rd  LLagopen.Rd  Ragraph-class.Rd  agopen.Rd  agopenSimple.Rd  agwrite.Rd  boundingBox-class.Rd  buildNodeList.Rd  clusterAttrs.Rd  clusterData-methods.Rd  clusterDataDefaults-methods.Rd  edgeData-methods.Rd  edgeDataDefaults-methods.Rd  getAttrs.Rd  getDefAttrs.Rd  getDefaultAttrs.Rd  graphData-methods.Rd  graphDataDefaults-methods.Rd  graphLayout.Rd  graphvizCapabilities.Rd  graphvizVersion.Rd  imageMap.Rd  layoutGraph.Rd  makeNodeAttrs.Rd  nodeData-methods.Rd  nodeDataDefaults-methods.Rd  pEdge-class.Rd  pNode-class.Rd  pieGlyph.Rd  plot-methods.Rd  removedEdges.Rd  renderGraph.Rd  setAttrs.Rd  setDefAttrs.Rd  toDot-methods.Rd  (+3 more)
src/: LL_funcs.c  Makevars.in  Makevars.ucrt  Makevars.win  Makevars.win.in  Rgraphviz.c  RgraphvizInit.c  agopen.c  agread.c  agwrite.c  bezier.c  buildEdgeList.c  buildNodeList.c  common.h  doLayout.c  dotToFile.c  graphvizVersion.c  graphviz_build_version.R.win  init.c  util.h
src/graphviz/: Makefile.am  Makefile.in  aclocal.m4  builddate.h  config.h.in  configure  configure.ac
src/graphviz/lib/: Makefile.am  Makefile.in
src/graphviz/lib/cdt/: Makefile.in  cdt.3  cdt.h
src/graphviz/lib/circogen/: Makefile.in  blockpath.h  blocktree.h  circpos.h  circular.h  circularinit.c  deglist.c  nodeset.c
src/graphviz/lib/common/: Makefile.in  colxlate.c  geomprocs.h  htmllex.h  pointset.h  utils.c
src/graphviz/lib/dotgen/: Makefile.in  dotsplines.c
src/graphviz/lib/fdpgen/: Makefile.in  clusteredges.c  clusteredges.h  comp.c  comp.h  dbg.c  dbg.h  fdp.h  grid.c  grid.h  tlayout.c  xlayout.c  xlayout.h
src/graphviz/lib/graph/: Makefile.in  agxbuf.c
src/graphviz/lib/gvc/: Makefile.in
src/graphviz/lib/neatogen/: Makefile.in  compute_hierarchy.c  constrained_majorization_ipsep.c  digcola.h  embed_graph.h  fPQ.h  lu.c  mosek_quad_solve.h  multispline.c  multispline.h  neatosplines.c  printvis.c  quad_prog_vpsc.c
src/graphviz/lib/ortho/: Makefile.in  fPQ.c  fPQ.h  intset.c  intset.h  maze.c  maze.h  ortho.c  ortho.h  partition.c  partition.h  rawgraph.h  trapezoid.c
src/graphviz/lib/osage/: Makefile.in
src/graphviz/lib/pack/: Makefile.in
src/graphviz/lib/patchwork/: Makefile.in  patchwork.c  tree_map.h
src/graphviz/lib/pathplan/: Makefile.in  tri.h  vispath.h
src/graphviz/lib/rbtree/: Makefile.in
src/graphviz/lib/sfdpgen/: Makefile.in  sfdpinit.c  sfdpinternal.h  spring_electrical.h
src/graphviz/lib/sparse/: Makefile.in  SparseMatrix.h  general.h
src/graphviz/lib/twopigen/: Makefile.in  twopiinit.c
src/graphviz/lib/vpsc/: Makefile.in  csolve_VPSC.cpp
src/graphviz/lib/xdot/: Makefile.in  xdot.c
src/graphviz/libltdl/: Makefile.in  aclocal.m4  configure
src/graphviz/plugin/: Makefile.am  Makefile.in
src/graphviz/plugin/core/: Makefile.in  gvloadimage_core.c
src/graphviz/plugin/dot_layout/: Makefile.in
src/graphviz/plugin/neato_layout/: Makefile.in
src/libwin/i386/lib/: libcdt.la  libgraph.la  libgvc.la  libgvplugin_core.la  libgvplugin_dot_layout.la  libgvplugin_neato_layout.la  libpathplan.la  libxdot.la
src/libwin/x64/include/graphviz/: graph.h
src/libwin/x64/lib/: libcdt.la  libgraph.la  libgvc.la  libgvplugin_core.la  libgvplugin_dot_layout.la  libgvplugin_neato_layout.la  libpathplan.la  libxdot.la
tests/: runTests.R
vignettes/: Rgraphviz.Rnw  newRgraphvizInterface.Rmd  newRgraphvizInterface.Rnw  testing.Rmd
