# $Id: Makefile.am,v 1.49 2010/07/30 01:54:10 ellson Exp $ $Revision: 1.49 $
## Process this file with automake to produce Makefile.in


SUBDIRS = cdt graph pathplan \
	vpsc rbtree ortho sparse patchwork common \
	pack xdot gvc \
	circogen dotgen fdpgen neatogen twopigen sfdpgen osage

EXTRA_DIST = Makefile.old gvc.vcproj gvc.def
